Create button to empty grid and create new gridsize

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     </head>
     <body>
         <div class="gridcontainer" id="gridcontainer"></div>
+        <button class="createGrid">Create Grid</button>
     </body>
 </html>
