--- a/index.html
+++ b/index.html
@@ -7,7 +7,19 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="gridcontainer" id="gridcontainer"></div>
-        <button class="createGrid">Create Grid</button>
+        <div class="gameboy">
+            <div class="screen+btns">
+                <div class="screen">
+                    <div class="gridcontainer" id="gridcontainer"></div>
+                </div>
+                <div class="buttons">
+                    <button class="createGrid">Create Grid</button>
+                    <div class="OCbtns">
+                        <button>C</button>
+                        <button>O</button>
+                    </div>
+                </div>   
+            </div>
+        </div>
     </body>
 </html>
