add clear, grid and opacity buttons to css

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
                     <div class="gridcontainer" id="gridcontainer"></div>
                 </div>
                 <div class="buttons">
-                    <button class="createGrid">Create Grid</button>
+                    <button class="createGrid">Grid</button>
                     <div class="OCbtns">
-                        <button>C</button>
-                        <button>O</button>
+                        <button class="ocbtn">C</button>
+                        <button class="ocbtn">O</button>
                     </div>
                 </div>   
             </div>
