write java for clearbutton

--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
             <div class="screen+btns">
                 <div class="screen">
                     <div class="gridcontainer" id="gridcontainer"></div>
+                    <div class="logo">Etch-a-Sketch</div>                    
                 </div>
                 <div class="buttons">
                     <button class="createGrid">Grid</button>
                     <div class="OCbtns">
-                        <button class="ocbtn">C</button>
-                        <button class="ocbtn">O</button>
+                        <button class="ocbtn btnc">C</button>
+                        <button class="ocbtn btno">O</button>
                     </div>
                 </div>   
             </div>
